@@ -9,6 +9,8 @@ namespace Caliburn.PresentationFramework.Actions
     using System.Windows.Controls;
     using System.Collections.Generic;
     using Core.Invocation;
+    using Microsoft.Practices.ServiceLocation;
+    using ViewModels;
 
     /// <summary>
     /// An <see cref="IRoutedMessage"/> for actions.
@@ -118,6 +120,24 @@ namespace Caliburn.PresentationFramework.Actions
         public override string ToString()
         {
             return "Action: " + MethodName;
+        }
+
+        /// <summary>
+        /// Gets the default handlers for this type of message.
+        /// </summary>
+        /// <param name="node">The node to get default handlers for.</param>
+        /// <returns></returns>
+        public IEnumerable<IRoutedMessageHandler> GetDefaultHandlers(IInteractionNode node)
+        {
+            var context = node.UIElement.GetDataContext();
+            if(context == null)
+                yield break;
+
+            yield return new ActionMessageHandler(
+                ServiceLocator.Current.GetInstance<IViewModelDescriptionFactory>()
+                    .Create(context.GetType()),
+                context
+                );
         }
     }
 }
